--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,16 @@
   width: 10px;
 }
 
+* {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently*/
+}
+
 /* Track */
 /* ::-webkit-scrollbar-track {
   background: #eeeeee;
@@ -31,6 +41,7 @@ body {
 a {
   text-decoration: none;
 }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
